--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
-  "author": "",
+  "author": "Akash Kandpal",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.2.2"
